prevent layout flicker when loading pages

--- a/_sass/_banner.scss
+++ b/_sass/_banner.scss
@@ -5,6 +5,7 @@
 	background-position: center;
 	width: 100%;
 	height: 350px;
+	min-height: 350px;
 
 	display: grid;
 	align-items: end;
