--- a/_sass/_common.scss
+++ b/_sass/_common.scss
@@ -6,6 +6,10 @@ body {
 	font-family: "Roboto", "Arial", sans‑serif;
 }
 
+main {
+	min-height: 100vh;
+}
+
 /* Headers */
 main h1 {
 	color: white;
