--- a/_sass/special/_project.scss
+++ b/_sass/special/_project.scss
@@ -2,6 +2,11 @@
 
 /* TODO */
 
+
+.hidden {
+	display: none;
+}
+
 #project-metrics {
 	display: flex;
 	flex-direction: row;
